fixed logo on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -424,7 +424,7 @@ footer {
   .logo-full {
     left: 0;
 
-    span {
+    > span {
       display: none;
     }
   }
